Update jvm options for java 9