@@ -13,4 +13,5 @@
                  [com.rpl/specter "1.0.5"]]
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}}
-  :jvm-opts ["-Dorg.eclipse.jetty.websocket.client.LEVEL=WARN"])
+  :jvm-opts ["-Dorg.eclipse.jetty.websocket.client.LEVEL=WARN"
+             "--add-modules" "java.xml.bind"])
